--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-touch-icon-76x76.png" />
 
     <!-- iOS Home Screen Configuration -->
-    <meta name="apple-mobile-web-app-title" content="Your App Name" />
+    <meta name="apple-mobile-web-app-title" content="Notes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 
